<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sentiment_Activity">

    <androidx.cardview.widget.CardView
        android:layout_width="410dp"
        android:layout_height="733dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="311dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginEnd="159dp"
                android:layout_marginBottom="56dp"
                android:text="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="174dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="178dp"
                android:layout_marginBottom="56dp"
                android:text="@string/sentiment_analysis"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.486"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/btn_sentiment_analysis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginEnd="159dp"
                android:layout_marginBottom="52dp"
                android:text="@string/analyze"
                app:layout_constraintBottom_toTopOf="@+id/textView_analysis_sent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView_analysis_sent"
                android:layout_width="303dp"
                android:layout_height="33dp"
                android:layout_marginStart="179dp"
                android:layout_marginEnd="178dp"
                android:layout_marginBottom="72dp"
                android:gravity="center"
                android:text="@string/analysis"
                app:layout_constraintBottom_toTopOf="@+id/btn_go_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="171dp"
                android:layout_marginEnd="181dp"
                android:layout_marginBottom="72dp"
                android:gravity="center"
                android:text="@string/sentiment_desc"
                app:layout_constraintBottom_toTopOf="@+id/txt_sentiment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="VisualLintBounds" />

            <EditText
                android:id="@+id/txt_sentiment"
                android:layout_width="364dp"
                android:layout_height="59dp"
                android:layout_marginStart="23dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="68dp"
                android:ems="10"
                android:hint="@string/write_here"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/btn_sentiment_analysis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>